--- a/client/src/assets/scss/index.scss
+++ b/client/src/assets/scss/index.scss
@@ -1,11 +1,14 @@
-@import './reset';
-
+@import "./reset";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 
-&::before,
-&::after {
+  &::before,
+  &::after {
     box-sizing: inherit;
-}
+  }
+  body {
+    font-family: "Roboto", sans-serif;
+  }
 }
